--- a/certification.html
+++ b/certification.html
@@ -207,6 +207,20 @@
 
     <script src="certification.js"></script>
 
+    <footer class="happyteam-footer">
+        <div class="footer-content">
+            <img src="img/햄스터.webp" alt="미코팀 로고" class="footer-logo">
+            <h2>미코팀과 함께 최고의 플레이를 경험하세요!</h2>
+            <p>실력 향상부터 든든한 듀오까지, 미코팀이 여러분과 함께합니다.</p>
+            <div class="footer-links">
+                <a href="#">서비스 이용약관</a> | 
+                <a href="#">개인정보 처리방침</a> | 
+                <a href="#">문의하기</a>
+            </div>
+            <p class="copyright">© 2024 MICO. All rights reserved.</p>
+        </div>
+    </footer>
+
 
     <style>
         body.progress-page {
