--- a/progress.html
+++ b/progress.html
@@ -39,6 +39,9 @@
       <li><a href="notice.html">공지사항</a></li>
     </ul>
   </nav>
+
+
+  
 <script>
     document.addEventListener('DOMContentLoaded', () => {
       const toggle = document.querySelector('.dropdown-toggle');
@@ -54,8 +57,9 @@
       <img src="img/icons8-카카오-톡-48.png" alt=""> 카톡상담
     </a>
   </header>
+  
 
-asdasd
+
 
 <style>
 
@@ -122,13 +126,14 @@ top: 50%;
     font-family: 'Noto Sans KR', sans-serif;
     margin: 0;
     padding: 0;
-    background: #000; /* 전체 배경은 블랙 */
+    background: white; /* 전체 배경은 블랙 */
   }
 
   .progress-section {
     background: #111; /* 섹션 내부만 어둡게 */
     color: #fff;
     padding: 40px 5vw;
+    
   }
 
  .filters {
@@ -232,6 +237,7 @@ top: 50%;
     margin-bottom: 20px;
     position: relative;
     bottom: 50px;
+    margin-top: 100px;
   }
 
   .login-area input[type="password"] {
@@ -483,7 +489,19 @@ function closeModal() {
 
 
   </script>
-
+ <footer class="happyteam-footer">
+  <div class="footer-content">
+      <img src="img/햄스터.webp" alt="미코팀 로고" class="footer-logo">
+      <h2>미코팀과 함께 최고의 플레이를 경험하세요!</h2>
+      <p>실력 향상부터 든든한 듀오까지, 미코팀이 여러분과 함께합니다.</p>
+      <div class="footer-links">
+          <a href="#">서비스 이용약관</a> | 
+          <a href="#">개인정보 처리방침</a> | 
+          <a href="#">문의하기</a>
+      </div>
+      <p class="copyright">© 2024 MICO. All rights reserved.</p>
+  </div>
+</footer>
   
 </body>
 </html>
