--- a/progress.html
+++ b/progress.html
@@ -598,10 +598,13 @@ function closeModal() {
     image: "img/일반.webp"
   }));
 
+  // 주석 해제 시 한 번 실행됨
+  /*
   sampleData.forEach(async (item) => {
     await addDoc(colRef, item);
     console.log(`추가 완료: ${item.title}`);
   });
+  */
 
   let isAdmin = false;
   let progressData = [];
@@ -610,28 +613,28 @@ function closeModal() {
 
   async function fetchProgressData() {
     const snapshot = await getDocs(colRef);
-    progressData = snapshot.docs.map(doc => ({ id: doc.id, ...doc.data() }));
+    progressData = snapshot.docs.map(doc => ({ fid: doc.id, ...doc.data() }));
     renderTable();
   }
 
   document.getElementById('progressBody').addEventListener('click', async function(e) {
     if (e.target.classList.contains('btn-delete')) {
       const row = e.target.closest('tr');
-      const id = row.dataset.id;
+      const fid = row.dataset.fid;
 
       if (confirm('삭제하시겠습니까?')) {
-        await deleteDoc(doc(db, "progress", id));
+        await deleteDoc(doc(db, "progress", fid));
         fetchProgressData();
       }
     }
 
     if (e.target.classList.contains('btn-edit')) {
       const row = e.target.closest('tr');
-      const id = row.dataset.id;
+      const fid = row.dataset.fid;
       const titleCell = row.querySelector('.title');
       const newTitle = prompt("새 제목을 입력하세요:", titleCell.textContent);
       if (newTitle) {
-        await updateDoc(doc(db, "progress", id), { title: newTitle });
+        await updateDoc(doc(db, "progress", fid), { title: newTitle });
         fetchProgressData();
       }
     }
@@ -673,7 +676,7 @@ function closeModal() {
 
     paginated.forEach(item => {
       const tr = document.createElement('tr');
-      tr.dataset.id = item.id;
+      tr.dataset.fid = item.fid;
       tr.innerHTML = `
         <td>${item.id}</td>
         <td><span class="badge ${item.status === '진행중' ? 'badge-progress' : 'badge-done'}">${item.status}</span></td>
@@ -755,7 +758,6 @@ function closeModal() {
     fetchProgressData();
   }
 </script>
-
 
 
 </body>
