--- a/index.html
+++ b/index.html
@@ -364,7 +364,24 @@
     }
   });
 </script>
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    const questions = document.querySelectorAll(".faq-question");
 
+    questions.forEach((question) => {
+      question.addEventListener("click", function () {
+        this.classList.toggle("active");
+
+        const answer = this.nextElementSibling;
+        if (answer.style.display === "block") {
+          answer.style.display = "none";
+        } else {
+          answer.style.display = "block";
+        }
+      });
+    });
+  });
+</script>
 
 </body>
 </html>
