--- a/notice.html
+++ b/notice.html
@@ -56,11 +56,11 @@
   </header>
 
   <main>
-    <h1>고객후기</h1>
+    <h1>공지사항</h1>
     <p>고객후기 관련 내용이 들어갈 영역입니다.</p>
-    <h1>고객후기</h1>
+    <h1>공지사항</h1>
     <p>고객후기 관련 내용이 들어갈 영역입니다.</p>
-    <h1>고객후기</h1>
+    <h1>공지사항</h1>ㅇ
   </main>
 
   <script defer src="script.js"></script>
