--- a/reviews.html
+++ b/reviews.html
@@ -182,6 +182,7 @@
       font-size: 1.5rem;
       margin-bottom: 20px;
       font-weight: 700;
+      margin-top: 100px;
     }
 
     .slider-wrapper {
